Second page with about me

--- a/index.html
+++ b/index.html
@@ -65,7 +65,36 @@
 
                     <a href="#" class = "btn-box">More About Me</a>
             </div>
-            <section></section>
+        </section>
+        
+        <section>
+            <div class= "services" id="services">
+                <h1 class = "sub-title">My <span>Services</span></h1>
+                <div class = "services-list">
+                    <div>
+                        <i class = ""></i>
+                        <h2>UI/UX Design</h2>
+                        <p> I can design beautiful and responsive websites and web applications.</p>
+                            <a href="#" class = "read">learn more </a>
+                    </div>
+
+                    <div>
+                        <i class = ""></i>
+                        <h2>UI/UX Design</h2>
+                        <p> I can design beautiful and responsive websites and web applications.</p>
+                            <a href="#" class = "read">learn more </a>
+                    </div>
+
+                    <div>
+                        <i class = ""></i>
+                        <h2>UI/UX Design</h2>
+                        <p> I can design beautiful and responsive websites and web applications.</p>
+                            <a href="#" class = "read">learn more </a>
+                    </div>
+                </div>
+            </div>
+     
+        </section>
 
 
 
