my services update

--- a/index.html
+++ b/index.html
@@ -69,32 +69,34 @@
         
         <section>
             <div class= "services" id="services">
-                <h1 class = "sub-title">My <span>Services</span></h1>
-                <div class = "services-list">
-                    <div>
-                        <i class = ""></i>
-                        <h2>UI/UX Design</h2>
-                        <p> I can design beautiful and responsive websites and web applications.</p>
-                            <a href="#" class = "read">learn more </a>
-                    </div>
+                <div class = "container"></div>
+                    <h1 class = "sub-title">My <span>Services</span></h1>
+                    <div class = "services-list">
+                        <div>
+                            <i class='bx bx-code' style= 'color: #7df9ff'></i>
+                            <h2>UI/UX Design</h2>
+                            <p> I can design beautiful and responsive websites and web applications.</p>
+                                <a href="#" class = "read">learn more </a>
+                        </div>
 
-                    <div>
-                        <i class = ""></i>
-                        <h2>UI/UX Design</h2>
-                        <p> I can design beautiful and responsive websites and web applications.</p>
-                            <a href="#" class = "read">learn more </a>
-                    </div>
+                        <div>
+                            <i class='bx bx-crop' style= 'color: #7df9ff'></i>
+                            <h2>UI/UX Design</h2>
+                            <p> I can design beautiful and responsive websites and web applications.</p>
+                                <a href="#" class = "read">learn more </a>
+                        </div>
 
-                    <div>
-                        <i class = ""></i>
-                        <h2>UI/UX Design</h2>
-                        <p> I can design beautiful and responsive websites and web applications.</p>
-                            <a href="#" class = "read">learn more </a>
+                        <div>
+                            <i class='bx bxl-apple' style= 'color: #7df9ff'></i>
+                            <h2>UI/UX Design</h2>
+                            <p> I can design beautiful and responsive websites and web applications.</p>
+                                <a href="#" class = "read">learn more </a>
+                        </div>
                     </div>
                 </div>
             </div>
-     
         </section>
+        <h1 class = "sub-title">My <span>Skills</span></h1>
 
 
 
