services and skills page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Portfolio</title>
         <link rel ="stylesheet" href="stylesheet.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <script src="https://kit.fontawesome.com/847a9bd395.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <! this is line for getting icons>
         <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 
         <style>
@@ -97,6 +99,54 @@
             </div>
         </section>
         <h1 class = "sub-title">My <span>Skills</span></h1>
+
+        <section>
+            <div class = "container" id= "Skills">
+                <h1 class = "heading1">Technical Skills</h1>
+                <div class = "Technical- bars">
+
+                    <div class = "bar"><i style="color: #f89820;" class="fa-brands fa-java"></i>
+                        <div class = "info">
+                            <span>Java</span>
+                        </div>
+                        <div class = "progress-line Java">
+                            <span></span>
+                    </div>
+
+                    <div class = "bar"><i style= "color: #f0db4f;" class = "fa-brands fa-square-js"></i>
+                        <div class = "info">
+                            <span>JavaScript</span>
+                        </div>
+                        <div class = "progress-line JavaScript">
+                            <span></span>
+                    </div>
+
+                    <div class = "bar"><i style="color: #c32ec9;" class="fa-brands fa-python"></i>
+                        <div class = "info">
+                            <span>Python</span>
+                        </div>
+                        <div class = "progress-line Python">
+                            <span></span>
+                    </div>
+
+                    <div class = "bar"><i style="color: #c95d2e;" class="fa-brands fa-html5"></i>
+                        <div class = "info">
+                            <span>HTML</span>
+                        </div>
+                        <div class = "progress-line html">
+                            <span></span>
+                    </div>
+
+                    <div class = "bar"><i style="color: #147bbc;" class="fa-brands fa-css3-alt"></i>
+                        <div class = "info">
+                            <span>CSS</span>
+                        </div>
+                        <div class = "progress-line CSS">
+                            <span></span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
