code upto skill page ( technical on left )

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         </section>
         <h1 class = "sub-title">My <span>Skills</span></h1>
 
-        <section>
-            <div class = "container" id= "Skills">
+        <section id = "skillpage">
+            <div class = "container1" id= "Skills">
                 <h1 class = "heading1">Technical Skills</h1>
-                <div class = "Technical- bars">
+                <div class = "Technical-bars">
 
                     <div class = "bar"><i style="color: #f89820;" class="fa-brands fa-java"></i>
                         <div class = "info">
@@ -111,6 +111,7 @@
                         </div>
                         <div class = "progress-line Java">
                             <span></span>
+                        </div>
                     </div>
 
                     <div class = "bar"><i style= "color: #f0db4f;" class = "fa-brands fa-square-js"></i>
@@ -119,6 +120,7 @@
                         </div>
                         <div class = "progress-line JavaScript">
                             <span></span>
+                        </div>
                     </div>
 
                     <div class = "bar"><i style="color: #c32ec9;" class="fa-brands fa-python"></i>
@@ -127,6 +129,7 @@
                         </div>
                         <div class = "progress-line Python">
                             <span></span>
+                        </div>
                     </div>
 
                     <div class = "bar"><i style="color: #c95d2e;" class="fa-brands fa-html5"></i>
@@ -135,25 +138,98 @@
                         </div>
                         <div class = "progress-line html">
                             <span></span>
+                        </div>
                     </div>
 
                     <div class = "bar"><i style="color: #147bbc;" class="fa-brands fa-css3-alt"></i>
                         <div class = "info">
                             <span>CSS</span>
                         </div>
-                        <div class = "progress-line CSS">
+                        <div class = "progress-line css">
                             <span></span>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class = "container1">
+                <h1 class = "heading1">Professional Skills</h1>
+                <div class = "radial-bars">
+
+                    <div class = "radial-bar">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-1" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Problem Solving</div>
+                    </div>
+
+                    <div class = "radial-bar">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-2" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Leadership</div>
+                    </div>
+
+                    <div class = "radial-bars">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-3" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Analytical Thinking</div>
+                    </div>
+
+                    <div class = "radial-bars">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-4" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Creativity</div>
+                    </div>
+
+                    <div class = "radial-bars">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-5" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Team Management</div>
+                    </div>
+
+                    <div class = "radial-bars">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-6" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Fast Learner</div>
+                    </div>
+
+                    <div class = "radial-bars">
+
+                        <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
+                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "path path-7" cx = "100" cy = "100" r = "80"></circle> 
+                        </svg>
+                        <div class = "percentage">90%</div>
+                        <div class = "text">Programming</div>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
-
-
-
-
-
-
-
 
 
 
