aldon without editing content and responsive part

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <a href = "#" class = "logo">Portfolio</a>
 
                 <nav class = "navbar">
-                    <a href = "#" style="--i:1" class="active" >Home</a>
-                    <a href = "#" style="--i:2" >About</a>
-                    <a href = "#" style="--i:3" >Skill</a>
-                    <a href = "#" style="--i:4" >Portfolio</a>
-                    <a href = "#" style="--i:5" >Contact</a>
+                    <a href = "#home" style="--i:1" class="active" >Home</a>
+                    <a href = "#about" style="--i:2" >About</a>
+                    <a href = "#services" style="--i:3" >Skill</a>
+                    <a href = "#project" style="--i:4">Portfolio</a>
+                    <a href = "#contact" style="--i:5" >Contact</a>
                 </nav>
         </header>
-        <section class = "home"> 
+        <section class = "home" id = "home"> 
             <div class= "home-content">
                 <h3>Hello, It's me</h3>
                 <h1>Sri Ujjwal Reddy</h1>
@@ -159,7 +159,7 @@
                     <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-1" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
@@ -169,57 +169,57 @@
                     <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-2" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
                         <div class = "text">Leadership</div>
                     </div>
 
-                    <div class = "radial-bars">
+                    <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-3" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
                         <div class = "text">Analytical Thinking</div>
                     </div>
 
-                    <div class = "radial-bars">
+                    <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-4" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
                         <div class = "text">Creativity</div>
                     </div>
 
-                    <div class = "radial-bars">
+                    <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-5" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
                         <div class = "text">Team Management</div>
                     </div>
 
-                    <div class = "radial-bars">
+                    <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-6" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
                         <div class = "text">Fast Learner</div>
                     </div>
 
-                    <div class = "radial-bars">
+                    <div class = "radial-bar">
 
                         <svg x = "0px" y = "0px" viewBox = "0 0 200 200">
-                            <circle class = "progreass-bar" cx = "100" cy = "100" r = "80"></circle> 
+                            <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-7" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
                         <div class = "percentage">90%</div>
@@ -230,8 +230,81 @@
             </div>
 
         </section>
+    <section class = "project">
+        <div id = "Portfolio" id ="project"> 
+            <div class = "main-text" id = "project">
+                <h2>Latest<span>Projects</span></h2>
 
+                <div class = "portfolio-content">
+                    <div class="row">
+                        <img src = "portfolio1.jpg">
+                        <div class = "layer">
+                            <h5>Project Name1</h5>
+                            <p>This is the project description and the project details are .........</p>
 
+                            <a href="#"> <i class = 'bx bx-link-external' style = "color: aliceblue"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <img src = "portfolio2.jpg">
+                        <div class = "layer">
+                            <h5>Project Name2</h5>
+                            <p>This is the project description and the project details are .........</p>
+
+                            <a href="#"> <i class = 'bx bx-link-external' style = "color: aliceblue"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <img src = "portfolio3.jpg">
+                        <div class = "layer">
+                            <h5>Project Name3</h5>
+                            <p>This is the project description and the project details are .........</p>
+
+                            <a href="#"> <i class = 'bx bx-link-external' style = "color: aliceblue"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class = "contacat" id = "contact">
+        <div class = "contact-text">
+            <h2>Contact<span>Me</span></h2>
+            <h4>Let's Work Together</h4>
+            <p> If you have any questions or would like to work together, 
+                please feel free to contact me using the form below. 
+                I'll try to get back to you as soon as possible!</p>
+                <div class = "contact-list">
+                    <li><i class = 'bx bxs-send'></i>contact@gmail.com</li>
+                    <li><i class = 'bs bxs-phone'></i>1234567890</li>
+
+                </div>
+                <div class = "contact-icons">
+                    <a href= ""><i class='bx bxl-facebook-circle'></i></a>
+                    <a href= ""><i class='bx bxl-twitter'></i></a>
+                    <a href= ""><i class='bx bxl-instagram'></i></a>
+                    <a href= ""><i class='bx bxl-linkedin' ></i></a>
+                </div>
+        </div>
+
+        <div class = "contact-form">
+            <form action ="">
+                <input type = "text" placeholder = "Enter Your Name" required>
+                <input type = "email" placeholder = "Enter Your Email" required>
+
+                <input type = "text" placeholder = "Enter Your Subject" required>
+                <textarea name="" id ="" cols="40" rows="10" placeholder = "Enter Your Message" required></textarea>
+                <input type = "submit" value = "submit" class = "send">
+            </form>
+        </div>
+    </section>
+    <div class = "last-text">
+        <p>This is the end of my portfolio</p>
+    </div>
+    <a href="#" class = "top"><i class = 'bx bx-up-arrow-alt'></i></a>>
 
 
         <script src="main.js"></script>
