--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
                 <nav class = "navbar">
                     <a href = "#home" style="--i:1" class="active" >Home</a>
                     <a href = "#about" style="--i:2" >About</a>
-                    <a href = "#services" style="--i:3" >Skill</a>
-                    <a href = "#project" style="--i:4">Portfolio</a>
-                    <a href = "#contact" style="--i:5" >Contact</a>
+                    <a href = "#skills" style="--i:3" >Skills</a>
+                    <!-- <a href = "#project" style="--i:4">Portfolio</a>
+                    <a href = "#contact" style="--i:5" >Contact</a> -->
                 </nav>
         </header>
         <section class = "home" id = "home"> 
             <div class= "home-content">
-                <h3>Hello, It's me</h3>
+                <h3>Hello, it's me</h3>
                 <h1>Sri Ujjwal Reddy</h1>
                 <h3> And I'm a <span class="text"> </span></h3>
-                <p> I'm a Sophomore student at Arizona State University  
+                <p> I'm a sophomore at Arizona State University  
                     <br>currently pursuing my Bachelors in Computer Science.</p>
                     <div class = "home-sci">
-                        <a href = "#" style="--i:7" ><i class='bx bxl-instagram'></i></a>              <! this is for the social media links> 
-                        <a href = "#" style="--i:8" ></style> <i class='bx bxl-gmail' ></i></a>
+                        <a href = "https://github.com/sbeeredd04" style="--i:7" ><i class='bx bxl-github'></i></a>              <! this is for the social media links> 
+                        <!-- <a href = "#" style="--i:8" ></style> <i class='bx bxl-gmail' ></i></a>
                         <a href = "#" style="--i:9" ><i class='bx bxl-snapchat' ></i></a>
-                        <a href = "#" style="--i:10" ><i class='bx bxl-linkedin' ></i></a>
+                        <a href = "#" style="--i:10" ><i class='bx bxl-linkedin' ></i></a> -->
                         </div>
-                        <a href="#" class = "btn-box">More About Me</a>
+                        <!-- <a href="#" class = "btn-box">More About Me</a> -->
                     </div>
             </div>
 
@@ -55,9 +55,9 @@
                 <img src= "killua.jpg">
             </div>
             <div class = "about-text">
-                <h2>About<span>Me</span></h2>
-                <h4>Student</h4>
-                <p> Hey there! I'm a sophomore at Arizona State University, 
+                <h2>About <span>Me</span></h2>
+                <p> Hey there!<br> 
+                    I'm a sophomore at Arizona State University, 
                     studying Computer Science and working as an undergraduate researcher. 
                     Coding is not just a passion but also my favorite pastime. 
                     When the weekend rolls in, you'll find me staying active with basketball, volleyball, and badminton. 
@@ -65,64 +65,43 @@
                     I like to challenge myself with coding problems on HackerRank. 
                     That's a little glimpse of who I am a coding enthusiast, a sports lover, and a devoted anime fan.</p>
 
-                    <a href="#" class = "btn-box">More About Me</a>
+                    <!-- <a href="#" class = "btn-box">More About Me</a> -->
             </div>
         </section>
         
         <section>
-            <div class= "services" id="services">
+            <div class= "skills" id="skills">
                 <div class = "container"></div>
-                    <h1 class = "sub-title">My <span>Services</span></h1>
+                    <h1 class = "sub-title">My <span>Skills</span></h1>
                     <div class = "services-list">
                         <div>
                             <i class='bx bx-code' style= 'color: #7df9ff'></i>
-                            <h2>UI/UX Design</h2>
+                            <h2>Web Design</h2>
                             <p> I can design beautiful and responsive websites and web applications.</p>
-                                <a href="#" class = "read">learn more </a>
                         </div>
 
                         <div>
-                            <i class='bx bx-crop' style= 'color: #7df9ff'></i>
-                            <h2>UI/UX Design</h2>
-                            <p> I can design beautiful and responsive websites and web applications.</p>
-                                <a href="#" class = "read">learn more </a>
+                            <i class='bx bx-data' style= 'color: #7df9ff'></i>
+                            <h2>Data Science</h2>
+                            <p> Proficient in data science tools for analysis, visualization, and modeling.</p>
                         </div>
 
                         <div>
-                            <i class='bx bxl-apple' style= 'color: #7df9ff'></i>
-                            <h2>UI/UX Design</h2>
-                            <p> I can design beautiful and responsive websites and web applications.</p>
-                                <a href="#" class = "read">learn more </a>
+                            <i class='bx bx-brain' style= 'color: #7df9ff'></i>
+                            <h2>AI/ML</h2>
+                            <p> Proficient in developing regression, clustering, classification, and deep learning models.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <h1 class = "sub-title">My <span>Skills</span></h1>
+        <!-- <h1 class = "sub-title">My <span>Skills</span></h1> -->
 
         <section id = "skillpage">
-            <div class = "container1" id= "Skills">
+            <div class = "container1" id= "skills-two">
                 <h1 class = "heading1">Technical Skills</h1>
                 <div class = "Technical-bars">
-
-                    <div class = "bar"><i style="color: #f89820;" class="fa-brands fa-java"></i>
-                        <div class = "info">
-                            <span>Java</span>
-                        </div>
-                        <div class = "progress-line Java">
-                            <span></span>
-                        </div>
-                    </div>
-
-                    <div class = "bar"><i style= "color: #f0db4f;" class = "fa-brands fa-square-js"></i>
-                        <div class = "info">
-                            <span>JavaScript</span>
-                        </div>
-                        <div class = "progress-line JavaScript">
-                            <span></span>
-                        </div>
-                    </div>
-
+                    
                     <div class = "bar"><i style="color: #c32ec9;" class="fa-brands fa-python"></i>
                         <div class = "info">
                             <span>Python</span>
@@ -149,6 +128,15 @@
                             <span></span>
                         </div>
                     </div>
+
+                    <div class = "bar"><i style= "color: #f0db4f;" class = "fa-brands fa-square-js"></i>
+                        <div class = "info">
+                            <span>JavaScript</span>
+                        </div>
+                        <div class = "progress-line JavaScript">
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -172,7 +160,7 @@
                             <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-2" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
-                        <div class = "percentage">90%</div>
+                        <div class = "percentage">80%</div>
                         <div class = "text">Leadership</div>
                     </div>
 
@@ -182,7 +170,7 @@
                             <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-3" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
-                        <div class = "percentage">90%</div>
+                        <div class = "percentage">80%</div>
                         <div class = "text">Analytical Thinking</div>
                     </div>
 
@@ -202,7 +190,7 @@
                             <circle class = "progress-bar" cx = "100" cy = "100" r = "80"></circle> 
                             <circle class = "path path-5" cx = "100" cy = "100" r = "80"></circle> 
                         </svg>
-                        <div class = "percentage">90%</div>
+                        <div class = "percentage">80%</div>
                         <div class = "text">Team Management</div>
                     </div>
 
@@ -230,7 +218,7 @@
             </div>
 
         </section>
-    <section class = "project">
+   <!--  <section class = "project">
         <div id = "Portfolio" id ="project"> 
             <div class = "main-text" id = "project">
                 <h2>Latest<span>Projects</span></h2>
@@ -268,9 +256,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class = "contacat" id = "contact">
+    <!-- <section class = "contacat" id = "contact">
         <div class = "contact-text">
             <h2>Contact<span>Me</span></h2>
             <h4>Let's Work Together</h4>
@@ -300,7 +288,7 @@
                 <input type = "submit" value = "submit" class = "send">
             </form>
         </div>
-    </section>
+    </section> -->
     <div class = "last-text">
         <p>This is the end of my portfolio</p>
     </div>
