--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
                         </div>
                     </div>
 
+                    <div class = "bar"><i style="color: #c32ec9;" class="fa-brands fa-java"></i>
+                        <div class = "info">
+                            <span>Java</span>
+                        </div>
+                        <div class = "progress-line Python">
+                            <span></span>
+                        </div>
+                    </div>
+
                     <div class = "bar"><i style="color: #c95d2e;" class="fa-brands fa-html5"></i>
                         <div class = "info">
                             <span>HTML</span>
